flex-before-after

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -59968,8 +59968,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .csrtfuq[class][class] {
   display: initial;
 }
-.c1yo0219[class][class]::after,
-.c1yo0219[class][class]::before {
+.flex-before-after[class][class]::after,
+.flex-before-after[class][class]::before {
   display: flex;
   content: '';
 }
