--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60479,6 +60479,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   ._yz46843 {
     padding-top: 50% !important;
     margin-top: 0 !important;
+    height: auto;
   }
 }
 @media (min-width: 1128px) {
