--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60470,20 +60470,20 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   vertical-align: middle !important;
   font-size: 34px !important;
 }
-._yz46843 {
+.hero {
   position: relative !important;
   margin-top: 0 !important;
   height: 100%;
 }
 @media (min-width: 744px) {
-  ._yz46843 {
+  .hero {
     padding-top: 50% !important;
     margin-top: 0 !important;
     height: auto;
   }
 }
 @media (min-width: 1128px) {
-  ._yz46843 {
+  .hero {
     padding-top: 50% !important;
     margin-top: 0 !important;
   }
