--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -42014,7 +42014,7 @@ video::cue {
   width: 100% !important;
   position: relative !important;
 }
-._n02jag {
+.absolute-reset {
   position: absolute !important;
   inset: 0px !important;
 }
@@ -60488,7 +60488,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     margin-top: 0 !important;
   }
 }
-._n02jag {
+.absolute-reset {
   position: absolute !important;
   top: 0 !important;
   bottom: 0 !important;
