--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60495,7 +60495,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   left: 0 !important;
   right: 0 !important;
 }
-._v0gz4uz {
+.lite-image {
   padding-top: var(--dls-liteimage-padding-top) !important;
   position: relative !important;
   -webkit-flex: 1 !important;
@@ -60892,7 +60892,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative !important;
   pointer-events: none !important;
 }
-._v0gz4uz {
+.lite-image {
   padding-top: var(--dls-liteimage-padding-top) !important;
   position: relative !important;
   -webkit-flex: 1 !important;
