--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60505,7 +60505,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background-repeat: no-repeat !important;
   height: 100%;
 }
-._4626ulj {
+.absolute-center {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   position: absolute !important;
