--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60514,7 +60514,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   align-items: center !important;
   justify-content: center !important;
 }
-._10xjrv2u {
+.lite-image-fallback {
   display: inline-block !important;
   vertical-align: bottom !important;
   height: 100% !important;
@@ -60525,7 +60525,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background-repeat: no-repeat !important;
 }
 @supports (object-fit: cover) {
-  ._10xjrv2u {
+  .lite-image-fallback {
     display: none !important;
     background-image: none !important;
   }
