lite-image-absolute

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60530,7 +60530,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     background-image: none !important;
   }
 }
-._1cb9q3xq {
+.lite-image-absolute {
   top: 0 !important;
   bottom: 0 !important;
   left: 0 !important;
@@ -60540,7 +60540,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: absolute !important;
 }
 @supports (object-fit: cover) {
-  ._1cb9q3xq {
+  .lite-image-absolute {
     height: 100% !important;
     width: 100% !important;
   }
