--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60545,7 +60545,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     width: 100% !important;
   }
 }
-._1d0k9d2t {
+.hero__overlay {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   position: absolute !important;
@@ -60563,7 +60563,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   flex-direction: column !important;
 }
 @media (min-width: 744px) {
-  ._1d0k9d2t {
+  .hero__overlay {
     -webkit-box-pack: center !important;
     -ms-flex-pack: center !important;
     -webkit-justify-content: center !important;
