hero__overlay-container

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60570,14 +60570,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     justify-content: center !important;
   }
 }
-._zhlx6jf {
+.hero__overlay-container {
   width: 100% !important;
   margin: 24px auto !important;
   padding-left: 24px !important;
   padding-right: 24px !important;
 }
 @media (min-width: 744px) {
-  ._zhlx6jf {
+  .hero__overlay-container {
     padding-left: 40px !important;
     padding-right: 40px !important;
     margin-top: 32px !important;
@@ -60585,7 +60585,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 @media (min-width: 1128px) {
-  ._zhlx6jf {
+  .hero__overlay-container {
     padding-left: 80px !important;
     padding-right: 80px !important;
     margin-top: 48px !important;
@@ -60593,7 +60593,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 @media (min-width: 1440px) {
-  ._zhlx6jf {
+  .hero__overlay-container {
     max-width: 1440px !important;
   }
 }
