rename -mx-2, rename text-hero

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60597,20 +60597,20 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     max-width: 1440px !important;
   }
 }
-._2h22gn {
+.-mx-2 {
   margin-left: -8px !important;
   margin-right: -8px !important;
 }
-._2h22gn:before {
+.-mx-2:before {
   content: ' ' !important;
   display: table !important;
 }
-._2h22gn:after {
+.-mx-2:after {
   content: ' ' !important;
   display: table !important;
   clear: both !important;
 }
-._6ioq746 {
+.text-hero {
   padding-left: 8px !important;
   padding-right: 8px !important;
   min-height: 1px !important;
@@ -60619,13 +60619,13 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   float: left !important;
 }
 @media (min-width: 744px) {
-  ._6ioq746 {
+  .text-hero {
     width: 50% !important;
     float: left !important;
   }
 }
 @media (min-width: 1128px) {
-  ._6ioq746 {
+  .text-hero {
     width: 50% !important;
     float: left !important;
   }
