--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60630,7 +60630,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     float: left !important;
   }
 }
-._14i3z6h {
+.heading {
   color: inherit !important;
   font-size: 1em !important;
   font-weight: inherit !important;
