--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60638,7 +60638,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin: 0 !important;
   padding: 0 !important;
 }
-._czm8crp {
+.hero__title {
   margin: 0 !important;
   word-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
