hero__title-wrapper, my-0

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60648,7 +60648,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: 1.375em !important;
   color: #484848 !important;
 }
-._122hpti {
+.hero__title-wrapper {
   font-size: 40px !important;
   line-height: 40px !important;
   letter-spacing: -1.5px !important;
@@ -60656,13 +60656,13 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   overflow-wrap: normal !important;
 }
 @media (min-width: 1128px) {
-  ._122hpti {
+  .hero__title-wrapper {
     font-size: 48px !important;
     line-height: 52px !important;
     letter-spacing: -2.5px !important;
   }
 }
-._yz1jt7x {
+.my-0 {
   margin-bottom: 0 !important;
   margin-top: 0 !important;
 }
