--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -46805,7 +46805,7 @@ video::cue {
     padding-bottom: var(--spacing-tab-vertical, 24px) !important;
   }
 }
-._18hrqvin {
+.text-desc {
   margin: 0 !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
