--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60666,19 +60666,19 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-bottom: 0 !important;
   margin-top: 0 !important;
 }
-._1ef5mfj {
+.hero__desc {
   font-size: 18px !important;
   font-weight: 400 !important;
   line-height: 28px !important;
 }
 @media (min-width: 744px) {
-  ._1ef5mfj {
+  .hero__desc {
     font-size: 22px !important;
     line-height: 32px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1ef5mfj {
+  .hero__desc {
     font-size: 26px !important;
     line-height: 36px !important;
   }
