add function for checkbox and showmore

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63048,3 +63048,31 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     border-radius: 12px !important;
   }
 }
+
+._1v5cvwv4 {
+    display: inline-block !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    height: 24px !important;
+    width: 24px !important;
+    text-align: center !important;
+    overflow: hidden !important;
+    vertical-align: top !important;
+    border-radius: 4px !important;
+    background: rgb(34, 34, 34) !important;
+    color: rgb(255, 255, 255) !important;
+    border-color: rgb(34, 34, 34) !important;
+}
+
+._1oj8hra {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  display: block !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 100% !important;
+  height: 100% !important;
+  margin-top: 2px !important;
+  margin-left: 3px !important;
+  color: rgb(255, 255, 255) !important;
+}
