--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63076,3 +63076,38 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-left: 3px !important;
   color: rgb(255, 255, 255) !important;
 }
+._1cb9q3xq {
+  inset: 0px !important;
+  height: 0px !important;
+  width: 0px !important;
+  position: absolute !important;
+}
+@supports (object-fit: cover) {
+  ._1cb9q3xq {
+    height: 100% !important;
+    width: 100% !important;
+  }
+}
+._n0qiwy {
+  position: absolute !important;
+  left: 16px !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+}
+@supports (--custom: properties) {
+  ._n0qiwy {
+    left: var(--spacing-carousel-navigation-horizontal, 16px) !important;
+  }
+}
+._1a3hvh71 {
+  background-color: rgb(255, 255, 255) !important;
+  height: 100% !important;
+  transform-origin: 0% center !important;
+  animation-name: keyframe_896wii !important;
+  animation-timing-function: linear !important;
+}
+._jicl67 {
+  background-color: rgb(255, 255, 255) !important;
+  height: 100% !important;
+  transform-origin: 0% center !important;
+}
