--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -48862,7 +48862,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   align-items: center;
 }
 .dir.c40xpfg[class][class] {
-  margin: var(--spacer-5) 0;
+  margin: 16px 0;
 }
 .dir-ltr.i772rby[class][class] {
   margin: 0 var(--spacer-4) 0 var(--spacer-6);
@@ -48875,6 +48875,16 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 .dir.l1vl8tcn[class][class] {
   padding: var(--spacer-6);
+}
+.s1k6l13p[class][class] {
+  position: default;
+  top: auto;
+  overflow: auto;
+}
+.dir.s1k6l13p[class][class] {
+  box-shadow: none !important;
+  border: none !important;
+  border-radius: none !important;
 }
 .sfme1lx[class][class] {
   position: absolute;
@@ -48893,16 +48903,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .dir-ltr.sfme1lx[class][class] {
   left: 0;
 }
-.s1k6l13p[class][class] {
-  position: default;
-  top: auto;
-  overflow: auto;
-}
-.dir.s1k6l13p[class][class] {
-  box-shadow: none;
-  border: none;
-  border-radius: none;
-}
+
 .c1tt8vn6[class][class] {
   font-size: var(--font-size-sm);
   line-height: var(--line-height-md);
@@ -52980,10 +52981,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: #222 !important;
 }
 .dir.i4tq7yb[class][class] {
-  padding: 10px 0;
+  padding: 10px 0 !important;
 }
 .dir-ltr.i4tq7yb[class][class] {
-  padding-left: 20px;
+  padding-left: 20px !important;
 }
 .dir.lhaa7s2[class][class] {
   margin: -8px 0 var(--spacer-9);
@@ -63165,4 +63166,360 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 .header-filter--active[class][class] .header-filter__label[class][class]::after {
   opacity: 1;
+}
+
+._tfpul05 {
+  -webkit-box-pack: start !important;
+  -webkit-box-align: center !important;
+  top: 1px !important;
+  height: 50px !important;
+  width: 36px !important;
+  display: flex !important;
+  padding: 0px !important;
+  position: absolute !important;
+  border: none !important;
+  background-color: transparent !important;
+  align-items: center !important;
+  color: rgb(34, 34, 34) !important;
+  left: -12px !important;
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0), white, white) !important;
+  justify-content: flex-start !important;
+}
+
+._1i9dva05 {
+  -webkit-box-pack: end !important;
+  -webkit-box-align: center !important;
+  top: 1px !important;
+  height: 50px !important;
+  width: 36px !important;
+  display: flex !important;
+  padding: 0px !important;
+  position: absolute !important;
+  border: none !important;
+  background-color: transparent !important;
+  align-items: center !important;
+  color: rgb(34, 34, 34) !important;
+  right: -12px !important;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), white, white) !important;
+  justify-content: flex-end !important;
+}
+
+._tfpul05.hidden,
+._1i9dva05.hidden {
+  display: none !important;
+}
+
+._j292vx {
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  max-height: calc(var(--vh, 1vh) * 100) !important;
+}
+
+@supports (max-height: -webkit-fill-available) {
+  ._j292vx {
+    max-height: max(-webkit-fill-available, calc(var(--vh, 1vh) * 100)) !important;
+  }
+}
+
+._b21f4g {
+  border: 0px !important;
+  clip: rect(0 0 0 0) !important;
+  -webkit-clip-path: inset(100%) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+  margin-top: -1px !important;
+}
+
+._z4lmgp {
+  display: contents !important;
+}
+
+._b21f4g {
+  border: 0px !important;
+  clip: rect(0 0 0 0) !important;
+  -webkit-clip-path: inset(100%) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+  margin-top: -1px !important;
+}
+
+._ojerypf {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  height: 100% !important;
+  max-height: 100% !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  display: flex !important;
+  flex-direction: column !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_d37zz3 !important;
+}
+
+.c40xpfg[class][class] {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.dir.c40xpfg[class][class] {
+  margin: 16px 0;
+}
+
+.dir-ltr.i772rby[class][class] {
+  margin: 0 12px 0 24px !important;
+}
+
+.dir-ltr.s5vb0u3[class][class] {
+  padding-right: 24px;
+}
+
+.s5vb0u3[class][class] {
+  flex-grow: 1;
+}
+
+._oda838 {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+}
+
+._oda838::before {
+  content: "" !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 32px !important;
+  height: 32px !important;
+  border-radius: 50% !important;
+}
+
+._e296pg {
+  position: relative !important;
+}
+
+.dir.a1vub294[class][class] {
+  border: 0;
+  padding: 0;
+}
+
+.a1vub294[class][class] {
+  -webkit-clip: rect(0 0 0 0);
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.dir.ctqyxkl[class][class] {
+  cursor: text;
+  margin: 0;
+  background: #f7f7f7;
+  border: 1px solid #dddddd;
+  border-radius: 100px;
+  transition: box-shadow 0.2s ease;
+  transition-property: box-shadow,background;
+}
+
+.c1tt8vn6[class][class] {
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+}
+
+.ctqyxkl[class][class] {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  color: #222222;
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+}
+
+.dir.s1k6l13p[class][class] {
+  box-shadow: none;
+  border: none;
+  border-radius: none;
+}
+
+.dir-ltr.sfme1lx[class][class] {
+  left: 0;
+}
+
+.dir.sfme1lx[class][class] {
+  box-shadow: 0 8px 28px rgba(0,0,0,0.28);
+  border: 1px solid rgba(0,0,0,0.04);
+  border-radius: 32px;
+  padding: 12px 0;
+  background: #ffffff;
+}
+
+.s1k6l13p[class][class] {
+  position: default;
+  top: auto;
+  overflow: auto;
+}
+
+.sfme1lx[class][class] {
+  position: absolute;
+  width: 100%;
+  top: calc(100% + 28px);
+  overflow: hidden;
+  z-index: 2;
+}
+
+.dir.a1vub294[class][class] {
+  border: 0;
+  padding: 0;
+}
+.a1vub294[class][class] {
+  -webkit-clip: rect(0 0 0 0);
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.dir-ltr.i4tq7yb[class][class] {
+  padding-left: 20px;
+}
+.dir.i4tq7yb[class][class] {
+  padding: 10px 0;
+}
+.dir-ltr.i17j5df5[class][class] {
+  padding-left: 32px;
+}
+.dir.i17j5df5[class][class] {
+  border: none;
+  padding: 24px 0;
+  margin: 0;
+  background: none;
+}
+.i17j5df5[class][class] {
+  display: block;
+  width: 100%;
+  outline: none;
+  min-height: 1px;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  font-weight: inherit;
+  text-overflow: ellipsis;
+  -webkit-appearance: none;
+  appearance: none;
+}
+.dir.l7kl1pb[class][class] {
+  margin: 0;
+  padding: 0;
+}
+.l7kl1pb[class][class] {
+  list-style-type: none;
+}
+.dir.t1anu1jt[class][class] {
+  margin: 12px 20px 12px;
+  padding: 0;
+}
+.t1anu1jt[class][class] {
+  display: block;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 600;
+}
+.dir.l135y242[class][class] {
+  margin: 0;
+  padding: 0;
+}
+.l135y242[class][class] {
+  display: block;
+}
+
+.dir.ra379ne[class][class] {
+  padding: 12px 24px;
+}
+.ra379ne[class][class] {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.dir-ltr.imr2k6c[class][class] {
+  margin-right: 16px;
+}
+.dir.imr2k6c[class][class] {
+  background: #ebebeb;
+  border-radius: 8px;
+  padding: 10px;
+}
+.imr2k6c[class][class] {
+  flex-grow: 0;
+}
+.l1aeurux[class][class] {
+  flex-grow: 1;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: break-spaces;
+  font-size: 16px;
+  line-height: 20px;
+  color: #222222;
+  font-weight: 400px;
+}
+
+
+._1iw81xea {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: #FFFFFF !important;
+  position: relative;
+  height: 100%;
+  max-height: 100% !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  display: flex !important;
+  flex-direction: column !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_1hvlqe7 !important;
 }
