fx no. 2 - done adding interaction

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63523,3 +63523,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   animation-fill-mode: both !important;
   animation-name: keyframe_1hvlqe7 !important;
 }
+
+._1ku51f04.hidden {
+  display: none !important;
+}
